# SysWeaver

./: .gitignore  00_提交说明.md  01_设计说明文档.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  build-all-platforms.sh  build-release.sh  demo.sh  push-release.sh  test_scenarios.sh  使用说明书.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: 02_视频录制脚本.md
src/: auto_api_detect.rs  config.rs  main.rs  user_config.rs  voice.rs
src/agent/: loop.rs  memory.rs  mod.rs  planner.rs
src/context/: mod.rs  system_scan.rs
src/executor/: local.rs  mod.rs  ssh.rs
src/explainer/: mod.rs
src/image/: mod.rs  security.rs
src/llm/: client.rs  prompt.rs
src/playbook/: manager.rs  mod.rs
src/safety/: audit.rs  classifier.rs  mod.rs  patterns.rs
src/tools/: cron.rs  file.rs  health.rs  log.rs  mod.rs  net.rs  package.rs  process.rs  service.rs  shell.rs  system.rs  user.rs
src/types/: error.rs  mod.rs  risk.rs  tool.rs
src/ui/: app.rs  mod.rs  renderer.rs  state.rs  theme.rs
src/ui/widgets/: chat.rs  history.rs  input.rs  mod.rs  modal.rs  monitor.rs  status.rs  statusbar.rs  tabbar.rs
src/watchdog/: mod.rs
